<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/tv_home"
        android:id="@+id/homeFragment"
        android:icon="@drawable/icon_home" />
    <item android:title="@string/tv_cart"
        android:id="@+id/cartFragment"
        android:icon="@drawable/icon_cart"/>
    <item
        android:title="@string/tv_search"
        android:id="@+id/searchFragment"
        android:icon="@drawable/icon_search" />
    <item
        android:title="@string/tv_history"
        android:id="@+id/historyFragment"
        android:icon="@drawable/icon_history" />
    <item
        android:title="@string/tv_profile"
        android:id="@+id/profileFragment"
        android:icon="@drawable/icon_profile" />
</menu>